Thu Jun  6 12:28:20 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* ace/Select_Reactor_T.cpp: Moved the cancel_timer() methods
	  from the Select_Reactor_T.i file and added ACE_GUARD's around
 	  them to ensure we're serialized correctly.  Thanks to Johnny
 	  Chen <jchen@informatica.com> for motivating this.

Thu Jun  6 08:24:43 2002  Jeff Parsons <parsons@cs.wustl.edu>

        * ace/Malloc_T.h:

          Removed extra comment closer */.

Thu Jun  6 07:11:15 2002  Douglas C. Schmidt  <schmidt@tango.doc.wustl.edu>

	* THANKS: Just added our 1,500th ACE+TAO contributor!!!!!

	* ace/Malloc_T.cpp: Clarify that the memory backing store must
	  reside in a directory with the appropriate visibility and
 	  permissions.  Thanks to Frank O. Flemisch <f.o.flemisch@larc.nasa.gov> 
	  for reporting this.

Wed Jun  5 23:06:11 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/DLL_Manager.h:  Fixed compile error. Thanks to Jai
	  Balasubramanian for pointing this out.

Wed Jun  5 16:58:41 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ACEXML/common/Mem_Map_Stream.cpp:

          Instantiate the templates needed when explicit templates are
          defined. Thanks to Carlos for pointing this out.

        * ACEXML/common/HttpCharStream.cpp:

          Peek means "get the next character", not "get the character
          after next". The previous change to the test caught this bug.

Wed Jun  5 16:42:43 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ACEXML/examples/SAXPrint/main.cpp (ACE_TMAIN):

          Modified the example to test fetching and parsing an XML URL.
          This actually tests most of the functions of the new stream
          class and is better than the lame test that I wrote the other
          day.

Wed Jun  5 13:54:03 UTC 2002  Don Hinton  <dhinton@ieee.org>

	* ace/DLL_Manager.{h,cpp}:
	* ace/Framework_Component.cpp:

	  Made ACE_DLL_Manager a true singleton instead of using the